--- a/css/I, Robot.css
+++ b/css/I, Robot.css
@@ -2,52 +2,19 @@ body{
     background-color: black;
     color:white;
 }
-button#movieTitle{
-    line-height: 350px;
-    font-size: 60px;
-    color: white;
-}
-button#movieTitle:hover{
-    outline: none;
-}
-button#movieTitle:focus{
-    outline: none;
-}
-div.carousel-inner{
-    width:100%;
-    height:100%;
-}
-div.item{
-    width:100%;
-    height:100%;
-}
-div#grid{
-    margin-top:-400px;
-    width:1100px;
-}
-#grid img{
-    width:100%;
+#bgm{
+    float:right;
 }
 div#textPart{
     margin:auto;
-    padding-top:50px;
     width:1200px;
-
 }
 div#machineLearningDemo{
     float:left;
     margin-bottom: 50px;
 }
 div#machineLearningDemoTitle{
-    height:500px;
-    margin-top:-300px;
-    padding-top: 170px;
-    padding-left: 70px;
-    background-size: contain;
-    background-repeat: no-repeat;
-}
-#machineLearningDemo ul{
-    margin-top: -200px;
+    padding-left: 40px;
 }
 #machineLearningDemo li{
     float:left;
@@ -75,4 +42,11 @@ div.demoIntro{
     height:250px;
     background-size: cover;
     background-repeat: no-repeat;
+}
+#footer{
+    color: white;
+    text-align:center;
+    height:50px;
+    padding:5px;
+    font-size: 20px;
 }
