--- a/css/Marvel.css
+++ b/css/Marvel.css
@@ -1,36 +1,40 @@
-.box{
-  margin: auto;
-  background-color: black;
-  height: 6000px;
-
+body{
+  background-color:black;
 }
-.nav{
-  font-size: 20px;
+#bgm{
+    float:right;
 }
 .demo1{
-  background-image: url(image/Marvel/title.png);
+  color:white;
+  background-image: url(../image/Marvel/title.png);
   background-repeat: no-repeat;
   background-size:contain;
   width: 1500px;
   height: 600px;
   padding-top: 150px;
   margin-top: -50px;
-  font-size: 50px;
+  font-size: 73px;
   font-weight: bolder;
   font-style: italic;
-  font-weight:lighter;
+
   font-family:fantasy;
   text-align: left;
-  text-indent: 1em;
+  text-indent: 0.5em;
   line-height:300px;
+
+}
+button.demo2-btn{
+    background: transparent;
+    border:none;
 }
 .demo2{
-
   text-align: center;
   border-radius: 50%;
+  width:300px;
+  height:300px;
+
 }
 .modal-title{
-
   color:black;
   font-family:sans-serif;
   font-weight: bold;
@@ -42,23 +46,99 @@
    font-family:serif;
    font-style: normal;
    line-height:35px;
+   line-height: height;
+   text-align: center;
+}
+.modal-footer{
+    weight:30px;
+    height:30px;
+}
+
+
+.media{
+    margin-top:-70px;
+    width:1500px;
+    height:800px;
+}
+.gif img{
+    width:600px;
+    height:1000px;
+}
+
+.introduction{
+  float: right;
+
+  margin-top: 50px;
+  padding-top: 150px;
+  padding-right:50px;
+  padding-left: 50px;
+
+  background-image: url(../image/Marvel/dialog.png);
+  background-repeat: no-repeat;
+  background-size:contain;
+  background-position: center;
+
+
+  width: 1500px;
+  height:300px;
+  font-size:45px;
+  text-indent: 7em;
+
+  color: white;
+  font-family:sans-serif;
+  font-weight: bolder;
+
+}
+#intro-img1{
+    width:600px;
+    height:400px;
+    float:left;
+    margin-top:-400px;
+}
+#intro-img2{
+    width:400px;
+    height:400px;
+    float:right;
+    margin-top:-20px;
+}
+.Bg{
+    width:700px;
+    height:700px;
+    margin-top:500px;
+    margin-left:50px;
+}
+.Bg img{
+    width:100%;
+    height:100%;
+}
+.point{
+  padding: 0px;
+  margin-top:-450px;
+  text-indent: 55em;
+}
+.point img{
+    width:200px;
+    height:200px;
+    radius:10%;
 }
 .png{
+
   margin-top:-1370px;
-  width: 1000px;
   height: 1500px;
 }
 .Dl{
-   position: relative;
-  z-index: 2;
-  margin-top: -900px;
-  margin-left: 50px;
-  background-color: transparent;
-  width: 1000px;
-  height:1000px;
-  font-size:34px;
+  float:right;
+  margin-top: -400px;
+  padding-top: 150px;
+  padding-right:50px;
+  padding-left: 50px;
+  background-image: url(../image/Marvel/Dial.png);
+  background-repeat: no-repeat;
+  background-size:contain;
+  width: 550px;
+  height:600px;
+  font-size:30px;
   line-height: 40px;
-  text-indent: 41em;
   color: white;
   font-family: monospace;
 
@@ -71,4 +151,240 @@
   text-indent: 41em;
   color: white;
   font-family: monospace;
+}
+.media2{
+    margin-top: 100px;
+    width:1500px;
+}
+#myCarousel{
+  width: 700px;
+  height: 400px;
+  margin-left: 100px;
+
+}
+.item img{
+    width:600px;
+    height:350px;
+}
+.left{
+  margin-left:-100px;
+}
+
+.Bg2{
+    width:700px;
+    height:700px;
+    margin-top:500px;
+    margin-left:50px;
+}
+.Bg2 img{
+  width:700px;
+  height:750px;
+  margin-top: -1480px;
+}
+
+.point2{
+  padding: 0px;
+  margin-top:-1500px;
+  text-indent: 56em;
+width:250px;
+height:250px;
+
+}
+.point2 img{
+    width:250px;
+    height:250px;
+}
+.Dl2{
+
+  float:right;
+  margin-top: -1000px;
+  padding-top: 150px;
+  padding-right:50px;
+  padding-left: 50px;
+  background-image: url(../image/Marvel/Dial.png);
+  background-repeat: no-repeat;
+  background-size:contain;
+  background-color: transparent;
+  width: 550px;
+  height:600px;
+  font-size:30px;
+  line-height: 40px;
+  color: black;
+  font-family:monospace;
+
+
+}
+.panel-collapse{
+    color:white;
+    background-color:black;
+}
+.media3{
+    margin-top:-370px;
+    width:1500px;
+}
+.gif2 img{
+    width:620px;
+    height:520px;
+}
+
+
+
+.Bg3{
+    width:700px;
+    height:700px;
+    margin-top:475px;
+    margin-left:50px;
+}
+.Bg3 img{
+  width:700px;
+  height:720px;
+  margin-top: -1500px;
+}
+.point3{
+  padding: 0px;
+  margin-top:-1560px;
+  text-indent: 56em;
+}
+.point3 img{
+    width:200px;
+    height:200px;
+    radius:10%;
+}
+.Dl3{
+  float:right;
+  margin-top: -1000px;
+  padding-top: 150px;
+  padding-right:50px;
+  padding-left: 50px;
+  background-image: url(../image/Marvel/Dial.png);
+  background-repeat: no-repeat;
+  background-size:contain;
+  width: 550px;
+  height:600px;
+  font-size:30px;
+  line-height: 40px;
+  color: white;
+  font-family: monospace;
+
+
+}
+
+.analysis{
+  float: right;
+  margin-top: -470px;
+  padding-top: 150px;
+  padding-right:50px;
+  padding-left: 50px;
+
+  background-image: url(../image/Marvel/dialog.png);
+  background-repeat: no-repeat;
+  background-size:contain;
+  background-position: center;
+
+
+  width: 1500px;
+  height:300px;
+  font-size:50px;
+  text-indent: 7.5em;
+
+  color: white;
+  font-family:sans-serif;
+  font-weight: bolder;
+}
+.Bg4{
+    background-image: url(../image/Marvel/frame2.png);
+    background-color: transparent;
+    background-repeat: no-repeat;
+    background-size:contain;
+    background-position: center;
+    width:1400px;
+    height:700px;
+    margin-top:-150px;
+    margin-left:75px;
+    border:black solid 3px;
+}
+.Bg4 img{
+  width:1000px;
+  height:700px;
+  margin-top: -1000px;
+}
+
+.words{
+
+  margin-top: -90px;
+  padding-top: 200px;
+  padding-right:250px;
+  padding-left: 250px;
+  line-height: height;
+  position: center;
+  width: 1400px;
+  height:600px;
+  font-size:26px;
+  line-height: 40px;
+  color: white;
+  font-family:sans-serif;
+
+}
+.ico{
+  float: left;
+  margin-top:-820px;
+  width: 300px;
+  height: 300px;
+}
+.ico img{
+  float: left;
+  width: 300px;
+  height: 300px;
+}
+
+.frame4{
+  margin-top: -40px;
+  float: right;
+  width: 1500px;
+  height: 300px;
+
+}
+.frame4 img{
+  float: right;
+  width: 1500px;
+  height: 300px;
+}
+.top1{
+
+  margin-top:150px;
+  background-image: url(../image/Marvel/top-city.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size:contain;
+  width: 1500px;
+  height: 280px;
+  line-height: 200px;
+  font-size: 70px;
+  font-style:normal;
+  font-family:sans-serif;
+
+  color: white;
+  text-align: center;
+
+}
+.bottom1{
+  margin-top: -20px;
+  background-image: url(../image/Marvel/bottom-city.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size:contain;
+  width: 1500px;
+  height: 300px;
+}
+
+.btn-default{
+  font-family: sans-serif;
+
+}
+#footer{
+    color: white;
+    text-align:center;
+    height:50px;
+    padding:5px;
+    font-size: 20px;
 }
